# testbot_openai

./: docker-compose.yaml  env.example  pyproject.toml
bot/commands/: __init__.py  gpt.py  help.py  start.py
bot/db/: __init__.py  user.py
bot/mics/: __init__.py
bot/middlewares/: __init__.py  user_register.py
