[tool.poetry]
name = "gptbot"
version = "0.1.0"
description = ""
authors = ["aidar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
aiogram = "^3.1.1"
openai = "^1.3.3"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
